Project

General

Profile

Actions

Bug #7870

closed

Time.now == "" causes an infinite loop

Bug #7870: Time.now == "" causes an infinite loop

Added by drbrain (Eric Hodel) over 13 years ago. Updated over 13 years ago.

Status:
Closed
Target version:
ruby -v:
ruby 2.0.0dev (2013-02-08) [x86_64-darwin12.2.1]
Backport:
[ruby-core:52305]

Description

=begin
This is a regression from 1.9.

2.0.0 branch:

$ ./ruby20 -v ../branches/ruby_2_0_0/test.rb
ruby 2.0.0dev (2013-02-08) [x86_64-darwin12.2.1]
../branches/ruby_2_0_0/test.rb:1: warning: possibly useless use of == in void context
../branches/ruby_2_0_0/test.rb:1: stack level too deep (SystemStackError)

1.9:

$ ruby19 -v test.rb
ruby 1.9.3p374 (2013-01-15 revision 38858) [x86_64-darwin12.2.1]
test.rb:1: warning: possibly useless use of == in void context

This also reproduces in trunk.

=end


Related issues 1 (0 open1 closed)

Related to Backport200 - Backport #7875: Backport r39292 to 2.0.0 which fixes #7870Closeddrbrain (Eric Hodel)Actions

Updated by drbrain (Eric Hodel) over 13 years ago Actions #1 [ruby-core:52306]

  • Assignee set to nobu (Nobuyoshi Nakada)

r38044 is the culprit.

Previously Ruby would return nil if the other object did not have to_str, now ruby calls other <=> self when other is not a String and does not have <=> leading to the infinite loop.

Updated by mame (Yusuke Endoh) over 13 years ago Actions #2 [ruby-core:52351]

  • Priority changed from 6 to Normal

I don't think that this is a showstopper, unless there is many or famous application depending on this behavior. Do you know anything?

After it is fixed in trunk, we may backport the patch to 2.0.0, but don't necessarily have to do so. I guess that it can be fixed 2.0.0-pXXX later (depending on Nagachika-san).

--
Yusuke Endoh

Updated by drbrain (Eric Hodel) over 13 years ago Actions #3 [ruby-core:52364]

Fog breaks due to this change (it is how I discovered it):

https://github.com/fog/fog/blob/master/lib/fog/core/attributes.rb#L53-L62

This compares a Time with the empty string leading to the infinite loop.

Fog provides an API for cloud services such as Amazon AWS, OpenStack, etc. It is fairly popular.

Updated by ko1 (Koichi Sasada) over 13 years ago Actions #4 [ruby-core:52366]

  • Priority changed from Normal to 6

Updated by mame (Yusuke Endoh) over 13 years ago Actions #5 [ruby-core:52373]

  • Status changed from Open to Assigned

drbrain, thank you! That is terrible.

Nobu, please check and fix it!

--
Yusuke Endoh

Updated by nobu (Nobuyoshi Nakada) over 13 years ago Actions #6

  • Status changed from Assigned to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r39292.
Eric, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


compar.c: inversed comarison without infinite recursion

  • compar.c (rb_invcmp): compare by inversed comarison, with preventing
    from infinite recursion. [ruby-core:52305] [Bug #7870]
  • string.c (rb_str_cmp_m), time.c (time_cmp): get rid of infinite
    recursion.
Actions

Also available in: PDF Atom